# AI_Manga_Studio

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: build.yml  ci.yml  lint.yml  test.yml
backend/: __init__.py  database.py  prompt_engine_20260706_185422_649.py
backend/agents/: __init__.py  base_agent.py
backend/alerts/: __init__.py
backend/api/: __init__.py
backend/app/: bootstrap.py  container.py  container_builder.py  error_handlers.py  lifecycle.py  main.py  middleware.py  routes.py
backend/architecture/: mvp_spec.py  production_readiness.py  refactoring_plan.py
backend/auth/: __init__.py
backend/collaboration/: __init__.py
backend/config/: __init__.py
backend/core/: __init__.py
backend/database/: __init__.py
backend/deployment/: __init__.py
backend/docs/: __init__.py
backend/events/: __init__.py
backend/exporter/: __init__.py  timeline_engine.py
backend/health/: __init__.py
backend/integrations/: __init__.py
backend/logging/: __init__.py
backend/memory/: __init__.py
backend/metrics/: __init__.py
backend/orchestration/: __init__.py  job_manager.py  lease.py  queue.py  retry.py  rollback.py  scheduler.py  worker.py
backend/plugins/: __init__.py
backend/providers/: __init__.py
backend/repositories/: __init__.py
backend/scheduler/: __init__.py
backend/sdk/: __init__.py
backend/security/: __init__.py
backend/services/: __init__.py
backend/shared/: __init__.py
backend/studio/: __init__.py
backend/tests/: __init__.py
backend/tracing/: __init__.py
backend/utils/: __init__.py
backend/ux/: __init__.py
backend/workflow/: __init__.py  checkpoint.py  compiler.py  edges.py  executor.py  graph.py  nodes.py  storyboard_dsl.py  validator.py
docs/: API.md  Architecture.md  CharacterMemory.md  Database.md  Deployment.md  PluginSDK.md  PromptEngine.md  ProviderSDK.md  README.md  StoryParser.md  StoryboardPlanner.md  VideoPipeline.md  Workflow.md
frontend/: architecture.py
launcher/: setup.py  start.py
plugins/: __init__.py  base.py
plugins/flux/: __init__.py  plugin.py
plugins/ltx/: __init__.py  plugin.py
plugins/music/: __init__.py  plugin.py
plugins/quality/: __init__.py  plugin.py
plugins/subtitle/: __init__.py  plugin.py
plugins/wan/: __init__.py  plugin.py
prompt_library/: __init__.py
prompt_library/camera/: __init__.py
prompt_library/character/: __init__.py
prompt_library/director/: __init__.py
scripts/: README.md  fix_pipeline3.py  run_v4_pipeline.py  test_v4_full.py  verify.py
tests/: test_app_smoke.py  test_core_imports.py  test_database_manager.py  test_provider_registry.py
workers/: __init__.py
workflow/: QUICKSTART.md  README.md
(+152 files in other folders)
