[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_manga_studio"
version = "0.1.0-alpha"
description = "Open-source AI Story Production Infrastructure: Novel to Manga to Video"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "AI_Manga_Studio Team" }
]
keywords = [
    "ai-manga",
    "story-to-video",
    "comfyui",
    "workflow-orchestration",
    "character-consistency",
    "storyboard",
    "prompt-engineering",
    "ai-production",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "websockets>=12.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "loguru>=0.7.2",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "pillow>=10.2.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "ujson>=5.9.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
comfyui = [
    "comfyui-api>=0.1.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]
all = [
    "ai_manga_studio[dev,comfyui,docs]",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/AI_Manga_Studio"
Documentation = "https://github.com/YOUR_USERNAME/AI_Manga_Studio/tree/main/docs"
Repository = "https://github.com/YOUR_USERNAME/AI_Manga_Studio"
Issues = "https://github.com/YOUR_USERNAME/AI_Manga_Studio/issues"

[project.scripts]
ai-manga = "backend.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "workflow*", "plugins*", "sdk*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
    "B008",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
